# StateMerger

./: .gitattribute  .gitignore  README.md  README_zh-CN.md  main.py  merge_states.json  paradox_file_parser.py  pyproject.toml  state_merger.py  state_merger_script.py
.github/workflows/: release.yml
data/: buildings.json  map_data.json  map_data_province_count.json  pops.json  state.json  trade.json
docs/: README_zh-CN.md
docs/images/: states.dds
scripts/: sync_version_from_tag.py
src/state-merger/: __main__.py  state_merger.py
src/vic3_state_merger/: __init__.py  __main__.py  buildings.py  cli.py  gui.py  pops.py  state_merger.py  state_regions.py  states.py  trade.py
src/vic3_state_merger/assets/: flag_definitions_usa.py  state_traits.py  usa_state_counter.py
tests/: test_hub_overrides.py  test_state_merger.py
