[build-system]
requires = ["setuptools>=69", "setuptools-scm[toml]>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vic3-state-merger"
authors = [{ name = "Brian Li", email = "brianlizsy@qq.com" }]
dynamic = ["version"]
description = "Victoria 3 States Merging Automation Script & Tutorial"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = ["pillow>=12.1.0", "pyradox-txt-parser>=5.0.1", "pyyaml>=6.0.3"]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/ShabbyGayBar/StateMerger"
Issues = "https://github.com/ShabbyGayBar/StateMerger/issues"

[project.scripts]
state-merger-cli = "vic3_state_merger.cli:main"

[project.gui-scripts]
state-merger = "vic3_state_merger.gui:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
tag_regex = "^v(?P<version>\\d+\\.\\d+\\.\\d+)$"
local_scheme = "no-local-version"
fallback_version = "0.0.0"

[dependency-groups]
dev = ["pytest>=9.0.2", "pytest-cov>=7.0.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src",
    "--cov-report=term-missing",
]
